Logueo google--Front-back

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_DB=mongodb://localhost:27017/ziquis_db
 PORT=8080
 SECRETORPRIVATEKEY=Estaesmiclav3
+
+GOOGLE_CLIENT_ID=517759648569-70lt2qolj1qh7pobbk5j3t94e6ehkr13.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
