--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.0.1",
     "google-auth-library": "^9.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.2"
   }
 }
